# master-conceptlogic-MLM

./: .gitignore  README.md  pyproject.toml
master-conceptlogic-mlm/: R30.py  R30.ttl  test.py
